[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/tools/level_node.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
bg_color = Color( 0.192157, 0.176471, 0.176471, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.658824, 0.203922, 0.152941, 1 )
corner_radius_top_left = 48
corner_radius_top_right = 48
corner_radius_bottom_right = 48
corner_radius_bottom_left = 48
corner_detail = 10

[node name="LevelNode" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.314972
margin_right = 0.314941
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = -48.0
margin_top = -49.0
margin_right = 48.0
margin_bottom = 47.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="gui_input" from="Panel" to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="Panel" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_mouse_exited"]
